initial upgrade to Java 21