@@ -49,11 +49,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <compilerArgument>--add-modules=jdk.incubator.foreign</compilerArgument>
-                    <compilerArgument>-Xlint:unchecked</compilerArgument>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>com.evolvedbinary.maven.jvnet</groupId>
@@ -124,10 +119,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>${argLine} --add-modules=jdk.incubator.foreign</argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
