@@ -17,7 +17,7 @@
         <module>yuv</module>
         <module>av1isobmff</module>
         <module>cicp</module>
-        <module>sidd</module>
+        <!-- <module>sidd</module> -->
         <module>jpeg2000</module>
     </modules>
     <properties>
@@ -27,8 +27,8 @@
         <javafx.version>20-ea+3</javafx.version>
         <jaxb.version>4.0.2</jaxb.version>
         <log4j2.version>2.20.0</log4j2.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.test.version>2.8.1</slf4j.test.version>
         <slf4j.version>2.0.6</slf4j.version>
@@ -84,13 +84,24 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.12.1</version>
+                    <configuration>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                            <arg>-Xlint:unchecked</arg>
+                        </compilerArgs>
+                    </configuration>
+                </plugin>
+                <plugin>
                     <groupId>com.diffplug.spotless</groupId>
                     <artifactId>spotless-maven-plugin</artifactId>
                     <version>${spotless.version}</version>
                     <configuration>
                         <java>
                             <googleJavaFormat>
-                                <version>1.15.0</version>
+                                <version>1.19.1</version>
                                 <style>AOSP</style>
                             </googleJavaFormat>
                         </java>
@@ -103,6 +114,14 @@
                             <phase>compile</phase>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.2.3</version>
+                    <configuration>
+                        <argLine>--enable-preview</argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
