@@ -10,10 +10,6 @@
     <artifactId>tools</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>net.frogmouth.rnd.eofff</groupId>
@@ -72,17 +68,13 @@
         </dependency>
         <dependency>
             <groupId>org.jmisb</groupId>
-            <artifactId>mimd</artifactId>
+            <artifactId>mimd2</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>jar</type>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jmisb</groupId>
             <artifactId>st1603</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <type>jar</type>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -101,16 +93,13 @@
             <artifactId>threeten-extra</artifactId>
             <version>1.7.2</version>
         </dependency>
-        <dependency>
-            <groupId>org.codice.imaging.nitf</groupId>
-            <artifactId>codice-imaging-nitf-core</artifactId>
-            <version>0.11-SNAPSHOT</version>
-        </dependency>
+        <!--
         <dependency>
             <groupId>net.frogmouth.rnd</groupId>
             <artifactId>sidd</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
+        -->
         <dependency>
             <groupId>net.frogmouth.rnd.eofff</groupId>
             <artifactId>jpeg2000</artifactId>
@@ -143,11 +132,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <compilerArgument>--add-modules=jdk.incubator.foreign</compilerArgument>
-                    <compilerArgument>-Xlint:unchecked</compilerArgument>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
@@ -176,33 +160,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>--add-modules=jdk.incubator.foreign</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>com.evolvedbinary.maven.jvnet</groupId>
-                <artifactId>jaxb30-maven-plugin</artifactId>
-                <version>0.15.0</version>
-                <configuration>
-                    <schemaDirectory>src/main/xsd</schemaDirectory>
-                    <schemaIncludes>
-                        <include>fakesecurity.xsd</include>
-                    </schemaIncludes>
-                    <bindingDirectory>src/main/xjb</bindingDirectory>
-                    <bindingIncludes>
-                        <include>fakesecurity.xjb</include>
-                    </bindingIncludes>
-                    <strict>false</strict>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
